--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -25,7 +25,9 @@ $bp-800: 50em;
 $bp-700: 43.75em;
 $bp-650: 40.625em;
 $bp-600: 37.5rem;
+$bp-580: 36.25rem;
 $bp-500: 31.25rem;
+$bp-450: 28.125rem;
 
 *,
 *::after,
@@ -65,4 +67,8 @@ html {
     display: grid;
     grid-template-rows: repeat(8, 1fr);
     grid-template-columns: repeat(6, 1fr);
+
+    @media screen and (max-width: $bp-700) {
+        grid-column: 1 / -1;
+    }
 }
