--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,18 +1,20 @@
 @import './base';
 
+.Home {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    background-color: #fff;
+
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+}
+
 .about {
-    grid-column: 2 / 5;
-    grid-row: 2 / 7;
+    grid-column: 1 / -1;
+    grid-row: 1 / span 4;
 
-    @media screen and (max-width: $bp-900) {
-        grid-column: 2 / 6;
-    }
-
-    @media screen and (max-width: $bp-600) {
-        grid-column: 1 / -1;
-        grid-row: 1 / -1;
-        margin: 3rem;
-    }
+    margin: 2rem 3rem 0 3rem;
 
     &--heading {
         margin-bottom: 3rem;
@@ -37,28 +39,26 @@
         }
     }
 
+    &__img-container{
+        grid-column: 1 / -1;
+        grid-row: 5 / -1;
+    
+        margin: 0 3rem 3rem 2rem;
+
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+
     &--image {
-        grid-column: 4 / span 2;
-        grid-row: 5 / 8;
+        height: 20rem;
+        width: 20rem; 
 
         position: relative;
 
-        @media screen and (max-width: $bp-900) {
-            grid-column: 3 / span 3;
-        }
-
-        @media screen and (max-width: $bp-700) {
-            grid-column: 2 / span 4;
-        }
-
-        @media screen and (max-width: $bp-500) {
-            grid-column: 1 / -1;
-            margin: 0 3rem;
-        }
-
         & img {
-            width: 80%;
-            height: 85%;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
             transform: scale(1);
             transition: all .2s;
