--- a/src/scss/_project.scss
+++ b/src/scss/_project.scss
@@ -2,7 +2,7 @@
 .projects {
     grid-column: 1 / -1;
     grid-row: 1 / -1;
-    margin: 3rem;
+    margin: 2rem 3rem;
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
@@ -24,9 +24,13 @@
             height: 22rem;
         }
 
+        @media screen and (max-width: $bp-700) {
+            height: 18rem;
+        }
 
-        @media screen and (max-width: $bp-650) {
-            height: 12rem;
+
+        @media screen and (max-width: $bp-500) {
+            height: 14rem;
         }
 
         &--heading {
