--- a/src/scss/_skills.scss
+++ b/src/scss/_skills.scss
@@ -3,16 +3,16 @@
     grid-column: 1 / -1;
     grid-row: 1 / -1;
 
-    padding: 5rem;
+    margin: 2rem 3rem;
     letter-spacing: .1rem;
     color: $color-secondary;
 
     @media screen and (max-width: $bp-700) {
-        padding: 2.5rem;
+        margin: 2rem 3rem;
     }
 
     @media screen and (max-width: $bp-600) {
-        padding: 1rem;
+        margin: 2rem 3rem;
     }
 
     &__heading {
@@ -47,9 +47,9 @@
 
                     &:hover {
                         color: darken(green, 10%);
-                        background-color: #bedcfb;
+                        //background-color: #bedcfb;
                         cursor: pointer;
-                        transform: scale(1.02);
+                        transform: scaleX(1.02);
                     }
                 }
             }
