--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -30,12 +30,13 @@
             }
 
             @media screen and (max-width: $bp-580) {
-                margin-right: 5rem;
+                //margin-right: 5rem;
+                margin-bottom: 1rem;
             }
 
             @media screen and (max-width: $bp-500) {
                 margin-bottom: 1rem;
-                padding: .5rem 1rem;
+                padding: .5rem 0;
             }
 
             &:first-child {
