--- a/src/scss/_skills.scss
+++ b/src/scss/_skills.scss
@@ -38,6 +38,7 @@
 
             &-paragraph {
                 font-size: $default-font;
+                text-align: justify;
 
                 span {
                     color: green;
